--- a/app/views/devise/registrations/new.html.haml
+++ b/app/views/devise/registrations/new.html.haml
@@ -1,23 +1,60 @@
-.flex.items-center.justify-center
-  .max-w-md.w-full.px-6
-    %h2.text-xl.font-semibold Sign up
-    = form_for(resource, as: resource_name, url: registration_path(resource_name)) do |f|
-      = render "devise/shared/error_messages", resource: resource
-      .field
-        = f.label :email
-        %br/
-        = f.email_field :email, autocomplete: "email", class: 'relative block w-full px-3 py-2 border border-gray-300 placeholder-gray-500 text-gray-900 rounded-md focus:outline-none focus:shadow-outline-blue focus:border-blue-300 focus:z-10 sm:text-sm sm:leading-5', placeholder: 'Email address'
-      .field
-        = f.label :password
-        - if @minimum_password_length
-          %em
-            (#{@minimum_password_length} characters minimum)
-        %br/
-        = f.password_field :password, autocomplete: "new-password", class: 'relative block w-full px-3 py-2 border border-gray-300 placeholder-gray-500 text-gray-900 rounded-md focus:outline-none focus:shadow-outline-blue focus:border-blue-300 focus:z-10 sm:text-sm sm:leading-5'
-      .field
-        = f.label :password_confirmation
-        %br/
-        = f.password_field :password_confirmation, autocomplete: "new-password", class: 'relative block w-full px-3 py-2 border border-gray-300 placeholder-gray-500 text-gray-900 rounded-md focus:outline-none focus:shadow-outline-blue focus:border-blue-300 focus:z-10 sm:text-sm sm:leading-5'
-      .actions.mt-2
-        = f.submit "Sign up", class: 'px-3 py-2 text-white bg-gray-900 font-bold rounded-md'
-    = render "devise/shared/links"
+.bg-teal-600
+  .max-w-screen-lg.mx-auto
+    .flex.py-16
+      .flex.text-white.items-center(class="w-3/4")
+        = image_tag "student/128/white.svg", class: 'h-32 w-32'
+        %div.ml-6
+          %h1.text-4xl.font-bold Sign Up
+          %p.text-teal-400.mt-4
+            change your future with over 1000 professional courses
+            %br.hidden.md:inline from the top leading teachers and professionals
+
+
+      .text-white.flex.items-center.justify-between.text-center(class="w-1/4")
+        = link_to "#", class: 'block mx-auto group px-5 py-2 rounded border border-white bg-transparent hover:bg-white' do
+          %p.text-white.group-hover:text-teal-600 Questions?
+          %p.text-teal-200.group-hover:text-gray-300 Visit our Help Center
+
+.max-w-screen-lg.mx-auto.mt-10.px-6
+  .flex.justify-around.w-full
+    %div.w-full
+      = form_for(resource, as: resource_name, url: registration_path(resource_name)) do |f|
+        = render "devise/shared/error_messages", resource: resource
+        .field.mt-4
+          = f.label :email, class: 'text-xs text-gray-400'
+          %br/
+          = f.email_field :email, autocomplete: "email", class: 'mt-1 relative block w-full px-4 py-2 placeholder-gray-500 rounded-md focus:outline-none focus:z-10 sm:text-sm sm:leading-5', placeholder: 'Email address...'
+        .field.mt-4
+          = f.label :password, class: 'text-xs text-gray-400'
+          - if @minimum_password_length
+            %em.text-xs.text-gray-400
+              (#{@minimum_password_length} characters minimum)
+          %br/
+          = f.password_field :password, autocomplete: "new-password", class: 'mt-1 relative block w-full px-4 py-2 placeholder-gray-500 rounded-md focus:outline-none focus:z-10 sm:text-sm sm:leading-5', placeholder: 'Password...'
+        .field.mt-4
+          = f.label :password_confirmation, class: 'text-xs text-gray-400'
+          %br/
+          = f.password_field :password_confirmation, autocomplete: "new-password", class: 'mt-1 relative block w-full px-4 py-2 placeholder-gray-500 rounded-md focus:outline-none focus:z-10 sm:text-sm sm:leading-5', placeholder: 'Password confirmation...'
+        .actions.mt-2
+          = f.submit "Sign up", class: 'cursor-pointer mt-2 px-10 py-1 text-white text-2xl bg-red-800 hover:bg-red-700 font-bold rounded-md'
+
+        -# .flex.items-center.justify-center
+          -# = render "devise/shared/links"
+    %div.w-full.ml-6.pt-4
+      .purchase-summary.p-4
+        %h3.mb-1mb-3.uppercase.text-sm.font-bold.tracking-tighter.Purchase summary
+        %div.flex.mt-3.justify-between
+          %strong.text-gray-500 Subcription
+          %strong Student
+        %div.flex.mt-3.items-center.border-b.text-gray-600.border-black.mb-4
+          %span icon
+          %p.ml-3.mb-4 Access to over 1000 high quality courses. For individuals
+        %div.mt-3.border-b.border-black
+          .mb-4.flex.items-center.justify-between.mb-4
+            %p.text-gray-500 Price
+            %span US $9 per month
+        %div
+          %div.flex.mt-2
+            %input(type="checkbox")
+            %p.ml-2 Terms and conditions
+          %span.block.mt-1.text-gray-600.text-xs By checking i agree to terms and condition.
