--- a/app/views/layouts/application/_header.html.haml
+++ b/app/views/layouts/application/_header.html.haml
@@ -2,12 +2,17 @@
   .flex.max-w-screen-xl.mx-auto.h-16.justify-between.px-4.py-2
     .flex.items-center(class="w-1/2")
       = link_to "Home", root_path, class: 'text-lg hover:bg-gray-800'
-      %button.ml-4.text-lg.rounded.bg-gray-800.text-gray-200.px-3.py-2.hover:bg-gray-700.hover:border-gray-4 Courses
+      %button.ml-4.text-base.rounded.bg-gray-800.text-gray-200.px-4.py-2.hover:bg-gray-700.hover:border-gray-4 Courses
       = form_with(url: '#', method: :get, class: 'ml-4 w-full') do
         = label_tag :q, "Search for:", class: 'hidden'
-        = text_field_tag :q, nil, class: 'px-3 py-2 w-2/3 rounded bg-gray-800 text-lg text-gray-200 focus:bg-gray-700 focus:text-gray-100 ', placeholder: 'Search a course'
+        = text_field_tag :q, nil, class: 'w-2/3 relative px-4 py-2 placeholder-gray-500 rounded-md focus:outline-none focus:z-10 sm:text-sm sm:leading-5', placeholder: 'Search a course'
         = submit_tag "Search"
 
-    .flex.items-center(class="w-1/2 flex justify-end")
-      = link_to "Login", new_user_session_path, class: 'text-lg'
-      %button.px-3.py-2.rounded.text-lg.bg-red-800.hover:bg-red-700.ml-4 Get Started
+    - if user_signed_in?
+      .flex.items-center(class="w-1/2 flex justify-end")
+        = link_to "Logout", destroy_user_session_path, method: :delete, class: 'text-lg'
+        %button.px-3.py-2.rounded.text-lg.bg-red-800.hover:bg-red-700.ml-4 Notifications
+    -else
+      .flex.items-center(class="w-1/2 flex justify-end")
+        = link_to "Login", new_user_session_path, class: 'text-lg'
+        %button.px-3.py-2.rounded.text-lg.bg-red-800.hover:bg-red-700.ml-4 Get Started
