- Implement a dropdown menu for logged in users in dropdown_controller.js - Add styles for dropdown icons in _header.html.haml - Adjust bg-color of forgot password page to match the rest of the page

--- a/app/views/devise/registrations/new.html.haml
+++ b/app/views/devise/registrations/new.html.haml
@@ -46,9 +46,14 @@
         %div.flex.mt-3.justify-between
           %strong.text-gray-500 Subcription
           %strong Student
-        %div.flex.mt-3.items-center.border-b.text-gray-600.border-black.mb-4
-          %span icon
-          %p.ml-3.mb-4 Access to over 1000 high quality courses. For individuals
+        %div.mt-3.border-b.text-gray-600.border-black
+          %div.flex.items-center
+            %span
+              %svg.h-6.w-6.text-gray-500{xmlns: "http://www.w3.org/2000/svg", fill: 'currentColor'}
+                %path{:d => "M13.5 2L6 9.5 2.5 6 0 8.5l6 6 10-10z"}
+            %p.ml-3.mb-4
+              Access to over 1000 high quality courses.
+              %br For individuals
         %div.mt-3.border-b.border-black
           .mb-4.flex.items-center.justify-between.mb-4
             %p.text-gray-500 Price
