- Generate Instructor devise model, scopped controllers and scoped views  and permit additional attributes full_name and profile_name within registration - Configure route to reflect the changes in devise changes above - Generate instrctor factory -Turn on devise's scoped views option in initializer/devise.rb - Style the landing page landing.html.haml

--- a/app/javascript/stylesheets/application.scss
+++ b/app/javascript/stylesheets/application.scss
@@ -7,7 +7,8 @@ $bg-color: #1d2625;
 $bg-color-light: #33403e;
 $secondary-bg-color: #293331;
 
-body {
+body,
+header {
   background-color: $bg-color;
 }
 
