- Fix: Lowercase branch name in seeds.rb - require and configure tippy.js for course overlays - reduce the font size of heading in landing page

--- a/app/views/layouts/application.html.haml
+++ b/app/views/layouts/application.html.haml
@@ -9,7 +9,7 @@
     = stylesheet_link_tag 'application', media: 'all', 'data-turbolinks-track': 'reload'
     = stylesheet_pack_tag 'application', media: 'all', 'data-turbolinks-track': 'reload'
     = javascript_pack_tag 'application', 'data-turbolinks-track': 'reload'
-  %body.text-white
+  %body.text-gray-200.antialiased
     = render 'layouts/application/header'
     %div.pt-16
       = render 'layouts/application/alert'
