- Refactor course's branches to use _branch_html.haml partial - Load all course branches in courses_controller.rb - Create _categories.html.haml for category branches

--- a/app/views/courses/business.html.haml
+++ b/app/views/courses/business.html.haml
@@ -1,2 +1,2 @@
-%p this is business
+= render partial: 'courses/branch', locals: { branch: 'business', lead_text: 'Get the Technology and Creative Skills you need to launch your career by learning from our industry experts.'}
 
