--- a/app/views/courses/design.html.haml
+++ b/app/views/courses/design.html.haml
@@ -1,1 +1,2 @@
-%p this is design
+= render partial: 'courses/branch', locals: { branch: 'design', lead_text: 'Get the Technology and Creative Skills you need to launch your career by learning from our industry experts.'}
+
