--- a/app/views/courses/marketing.html.haml
+++ b/app/views/courses/marketing.html.haml
@@ -1,1 +1,2 @@
-%p this is marketing
+= render partial: 'courses/branch', locals: { branch: 'marketing', lead_text: 'Get the Technology and Creative Skills you need to launch your career by learning from our industry experts.'}
+
