--- a/app/views/courses/photography.html.haml
+++ b/app/views/courses/photography.html.haml
@@ -1,1 +1,2 @@
-%p this is photography
+= render partial: 'courses/branch', locals: { branch: 'photography', lead_text: 'Get the Technology and Creative Skills you need to launch your career by learning from our industry experts.'}
+
