--- a/app/views/courses/course/_course_overlay.html.haml
+++ b/app/views/courses/course/_course_overlay.html.haml
@@ -3,7 +3,7 @@
     %p image
     .ml-3.flex.flex-col
       %h1.font-bold.text-gray-900.text-base= course.title
-      %p.text-xs course.instructor.name
+      %p.text-xs= course.instructor.full_name
   %div.mt-4
     %p.text-base.text-gray-700= course.description
   %div.mt-4
@@ -21,5 +21,5 @@
       %span.text-xs 12 lessons
       %span.text-xs= course.level 
     %div
-      =link_to 'Watch Trailer', '#', class: 'inline-block px-4 py-3 rounded-lg bg-teal-500 text-white hover:bg-teal-600 '
+      =link_to 'Watch Trailer', course_path(course), class: 'inline-block px-4 py-3 rounded-lg bg-teal-500 text-white hover:bg-teal-600 '
 
