- In tailwind.config.js extend colors to include brand-primary, brand-secondary and brand-secondary - Update header to user tailwind extended colors - Remove redudant require for tailwind.config.js - Add hidden class to footer

--- a/app/views/layouts/application/_footer.html.haml
+++ b/app/views/layouts/application/_footer.html.haml
@@ -1,4 +1,4 @@
-%footer.fixed.bottom-0.w-full.text-white.z-10.bg-teal-900
+%footer.fixed.bottom-0.w-full.text-white.z-10.bg-teal-900.hidden
   .flex.max-w-screen-xl.mx-auto.justify-between.px-4.py-2
     %p this is the footer
  
