--- a/app/views/layouts/application/_header.html.haml
+++ b/app/views/layouts/application/_header.html.haml
@@ -1,8 +1,8 @@
 %header.fixed.top-0.w-full.z-10
   .flex.max-w-screen-xl.mx-auto.h-16.justify-between.px-4.py-2
     .flex.items-center(class="w-1/2")
-      = link_to "Home", root_path, class: 'text-lg hover:bg-gray-800'
-      %button.ml-4.text-base.rounded.bg-gray-800.text-gray-200.px-4.py-2.hover:bg-gray-700.hover:border-gray-4 Courses
+      = link_to "Home", root_path, class: 'text-2xl font-extrabold'
+      %button.ml-4.text-base.rounded.bg-brand-secondary.text-gray-200.px-4.py-2.hover:bg-teal-900 Courses
       = form_with(url: '#', method: :get, class: 'ml-4 w-full') do
         = label_tag :q, "Search for:", class: 'hidden'
         = text_field_tag :q, nil, class: 'w-2/3 relative px-4 py-2 placeholder-gray-500 rounded-md focus:outline-none focus:z-10 sm:text-sm sm:leading-5', placeholder: 'Search a course'
