--- a/app/javascript/stylesheets/application.scss
+++ b/app/javascript/stylesheets/application.scss
@@ -1,11 +1,24 @@
 @import "tailwindcss/base";
 @import "tailwindcss/components";
+
+
+
+
 @import "tailwindcss/utilities";
 
 //site variables
 $bg-color: #1d2625;
 $bg-color-light: #33403e;
 $secondary-bg-color: #293331;
+
+.panel {
+  transition: max-height .5s ease-out;
+}
+
+.panel-invisible {
+  max-height: 0;
+  transition: max-height .5s ease-out;
+}
 
 body,
 header {
@@ -25,4 +38,41 @@ form {
 
 .purchase-summary {
   background-color: $bg-color-light;
+}
+
+.wrap-collapsible {
+
+  .lbl-toggle::before {
+    content: ' ';
+    display: inline-block;
+    border-top: 5px solid transparent;
+    border-bottom: 5px solid transparent;
+    border-left: 5px solid currentColor;
+
+    vertical-align: middle;
+    margin-right: .7rem;
+    transform: translateY(-2px);
+
+    transition: transform .2s ease-out;
+  }
+
+  .collapsible-content {
+    max-height: 0px;
+    overflow: hidden;
+
+    transition: max-height .25s ease-in-out;
+  }
+
+  .toggle:checked + .lbl-toggle + .collapsible-content {
+    max-height: 100vh;
+  }
+
+  .toggle:checked + .lbl-toggle::before {
+    transform: rotate(90deg) translateX(-3px);
+  }
+
+  .toggle:checked + .lbl-toggle {
+    border-bottom-right-radius: 0;
+    border-bottom-left-radius: 0;
+  }
 }
