--- a/app/views/devise/passwords/new.html.haml
+++ b/app/views/devise/passwords/new.html.haml
@@ -19,7 +19,7 @@
       .field.mt-4
         = f.label :email, class: 'text-sm text-gray-400'
         %br/
-        = f.email_field :email, autofocus: true, autocomplete: "email", class: 'mt-1 relative block w-full px-4 py-2 placeholder-gray-500 rounded-md focus:outline-none focus:z-10 sm:text-sm sm:leading-5', placeholder: 'Your password...'
+        = f.email_field :email, autofocus: true, class: 'mt-1 relative block w-full px-4 py-2 placeholder-gray-500 rounded-md focus:outline-none focus:z-10 sm:text-sm sm:leading-5', placeholder: 'Your password...'
 
         %span.text-xs.text-gray-500 We will email you with info on how to reset your password.
       .actions.text-center.mt-3
