--- a/app/views/landing/index.html.haml
+++ b/app/views/landing/index.html.haml
@@ -5,6 +5,6 @@
       %p.mt-2 Bussiness, Technology and Creative skills taught by industrial experts. Explore a wide range of skills with our professional tutorials
       %button.mt-10.px-6.bg-white.text-gray-900.py-2.rounded-md.text-xl.hover:bg-gray-200 Browse Courses
       %p.mt-6.font-bold.text-gray-300.underline.hover:no-underline
-        = link_to 'Are you a teacher?', new_instructor_registration_path, class: 'instructor_sign-up-button'
+        = link_to 'Are you a teacher?', new_instructor_session_path, class: 'instructor-login-button'
     %div
       =image_tag 'macbook-teal.png', class: 'object-cover'
