FIX: Remove border-b-2b class in show template partials

--- a/app/views/courses/show/_course_coverage.html.haml
+++ b/app/views/courses/show/_course_coverage.html.haml
@@ -1,4 +1,4 @@
-%div.border-b-2.border-b-2b.border-brand-secondary.pb-10
+%div.border-b-2.border-brand-secondary.pb-10
   %div.max-w-screen-lg.mx-auto.pt-12
     %div.flex.rounded-lg.justify-between.pt-4
       %div{ class: "w-7/12" }
