--- a/app/views/courses/show/_course_lessons.html.haml
+++ b/app/views/courses/show/_course_lessons.html.haml
@@ -1,4 +1,4 @@
-%div.border-b-2.border-b-2b.border-brand-secondary.pb-10
+%div.border-b-2.border-brand-secondary.pb-10
   %div.max-w-screen-lg.mx-auto.pt-12
     %h3.text-xl.font-bold.font-serif Table of Contents
     %div.flex.rounded-lg.mt-4.justify-between.bg-brand-secondary
