--- a/app/views/courses/show/_course_meta.html.haml
+++ b/app/views/courses/show/_course_meta.html.haml
@@ -1,4 +1,4 @@
-%div.border-b-2.border-b-2b.border-brand-secondary.py-2
+%div.border-b-2.border-brand-secondary.py-2
   .max-w-screen-lg.mx-auto.text-white
     .flex.items-center.justify-between
       %div.flex.items-center
