--- a/app/views/courses/course/_course_overlay.html.haml
+++ b/app/views/courses/course/_course_overlay.html.haml
@@ -1,4 +1,4 @@
-%div.p-3.text-gray-600
+%div.p-3.text-gray-600.static
   .flex
     %p image
     .ml-3.flex.flex-col
@@ -21,5 +21,5 @@
       %span.text-xs 12 lessons
       %span.text-xs= course.level 
     %div
-      =link_to 'Watch Trailer', course_path(course), class: 'inline-block px-4 py-3 rounded-lg bg-teal-500 text-white hover:bg-teal-600 '
+      =link_to 'Watch Trailer', course_path(course), class: 'inline-block px-5 py-3 rounded bg-teal-500 text-white hover:bg-teal-600 '
 
