--- a/app/views/landing/index.html.haml
+++ b/app/views/landing/index.html.haml
@@ -9,34 +9,24 @@
     %div
       =image_tag 'macbook-teal.png', class: 'object-cover'
 
-.border-b-2.border-brand-secondary
+= render partial: 'landing/index/landing_lead'
+
+.border-b-2.border-brand-secondary.py-10
   .max-w-screen-lg.mx-auto
-    .grid.grid-cols-3.py-4
-      .flex.items-center.pl-2
-        .rounded-full.border.p-4.flex.items-center.text-brand-gray.text-xs
-          %svg.fill-current.h-8.w-8{xmlns: "http://www.w3.org/2000/svg", viewBox:"0 0 20 20" }
-            %path{ d:"M0 4c0-1.1.9-2 2-2h16a2 2 0 0 1 2 2v12a2 2 0 0 1-2 2H2a2 2 0 0 1-2-2V4zm6 0v12h8V4H6zM2 5v2h2V5H2zm0 4v2h2V9H2zm0 4v2h2v-2H2zm14-8v2h2V5h-2zm0 4v2h2V9h-2zm0 4v2h2v-2h-2zM8 7l5 3-5 3V7z" }
-        .pl-4.flex.flex-col
-          %p 1,000+ Courses
-          %p.text-brand-gray Explore a wide range of skills
-      .flex.items-center.pl-2
-        .rounded-full.border.p-4.flex.items-center.text-brand-gray.text-xs
-          %svg.fill-current.h-8.w-8{xmlns: "http://www.w3.org/2000/svg", viewBox:"0 0 20 20" }
-            %path{ d:"M19 11a7.5 7.5 0 0 1-3.5 5.94L10 20l-5.5-3.06A7.5 7.5 0 0 1 1 11V3c3.38 0 6.5-1.12 9-3 2.5 1.89 5.62 3 9 3v8zm-9 1.08l2.92 2.04-1.03-3.41 2.84-2.15-3.56-.08L10 5.12 8.83 8.48l-3.56.08L8.1 10.7l-1.03 3.4L10 12.09z" }
-        .pl-4.flex.flex-col
-          %p By Industry Experts
-          %p.text-brand-gray
-            Professional development from the
-            %br/
-            best people
-      .flex.items-center.pl-2
-        .rounded-full.border.p-4.flex.items-center.text-brand-gray.text-xs
-          %svg.fill-current.h-8.w-8{xmlns: "http://www.w3.org/2000/svg", viewBox:"0 0 20 20" }
-            %path{ d:"M14.66 15.66A8 8 0 1 1 17 10h-2a6 6 0 1 0-1.76 4.24l1.42 1.42zM12 10h8l-4 4-4-4z" }
-        .pl-4.flex.flex-col
-          %p Unlimited Access
-          %p.text-brand-gray
-            Unlock Library and learn any topic
-            %br/
-            with one subscription.
+    .flex.items-center.justify-between
+      %h2.text-3xl.border-b-4.border-teal-600 Top Courses
+      %div.flex.items-center
+        %h3.text-sm.uppercase Popular Topics
+        %div.pl-4
+          %button.ml-1.bg-transparent.border.rounded-full.px-4.py-1.border-brand-gray.text-brand-gray.hover:bg-brand-gray.hover:text-white.transition-colors.duration-300 All
+          %button.ml-1.bg-transparent.border.rounded-full.px-4.py-1.border-brand-gray.text-brand-gray.hover:bg-brand-gray.hover:text-white.transition-colors.duration-300 Development
+          %button.ml-1.bg-transparent.border.rounded-full.px-4.py-1.border-brand-gray.text-brand-gray.hover:bg-brand-gray.hover:text-white.transition-colors.duration-300 Design
+          %button.ml-1.bg-transparent.border.rounded-full.px-4.py-1.border-brand-gray.text-brand-gray.hover:bg-brand-gray.hover:text-white.transition-colors.duration-300 Photography
+          %button.ml-1.bg-transparent.border.rounded-full.px-4.py-1.border-brand-gray.text-brand-gray.hover:bg-brand-gray.hover:text-white.transition-colors.duration-300 Business
+    %div.pt-4
+      %div.mt-4.grid.grid-cols.sm:grid-cols-2.md:grid-cols-3.lg:grid-cols-4.gap-4{ data: { controller: 'course-overlay' }}
+        = render @top_courses
+    %div.py-8
+      %button.block.mx-auto.px-4.py-2.bg-transparent.border.hover:bg-brand-gray.border-brand-gray.text-brand-gray.rounded.hover:text-white.transition-colors.duration-300 Browse Courses
+
 
