--- a/app/views/landing/index.html.haml
+++ b/app/views/landing/index.html.haml
@@ -26,7 +26,7 @@
     %div.pt-4
       %div.mt-4.grid.grid-cols.sm:grid-cols-2.md:grid-cols-3.lg:grid-cols-4.gap-4{ data: { controller: 'course-overlay' }}
         = render @top_courses
-    %div.py-8
+    %div.pt-10
       %button.block.mx-auto.px-4.py-2.bg-transparent.border.hover:bg-brand-gray.border-brand-gray.text-brand-gray.rounded.hover:text-white.transition-colors.duration-300 Browse Courses
 
 
