- Generate categories controller - Define categories_format_partial_path method in CategoriesHelper - Add specs categories_format_partial_path in CategoriesHelpr - Create _category.html.haml in categories folder - Split _category.html.haml in partial for home page format and branch format

--- a/app/views/courses/branch/_categories.html.haml
+++ b/app/views/courses/branch/_categories.html.haml
@@ -1,7 +1,5 @@
-- branch_path_name = "#{params[:action]}_courses_path"
 %div.max-w-screen-xl.mt-1.mr-auto.pb-4
   = link_to 'Library', '#', class: 'inline-block text-gray-500 ml-6 ont-semibold hover:text-white'
   = link_to 'Explore', '#', class: 'ml-6 text-gray-500 font-semibold hover:text-white'
-  - @branches.each do |branch|
-    = link_to_if (branch == params[:action]), branch, send(branch_path_name), class: "ml-6 text-gray-500 font-semibold hover:text-white border-b-4 border-teal-600" do
-      = link_to branch, {action: branch}, class: 'ml-6 text-gray-500 font-semibold hover:text-white'
+
+  = render @branches
