--- a/app/views/categories/category/_homepage_categories.html.haml
+++ b/app/views/categories/category/_homepage_categories.html.haml
@@ -1,2 +1,2 @@
-%button.ml-1.bg-transparent.border.rounded-full.px-4.py-1.border-brand-gray.text-brand-gray.hover:bg-brand-gray.hover:text-white.transition-colors.duration-300= category.branch
-
+= link_to_if (category.branch == params[:branch]), category.branch, root_path(branch: category.branch), remote: true, class: "ml-1 border rounded-full px-4 py-1 border-brand-gray bg-brand-gray text-white" do
+  = link_to category.branch, root_path(branch: category.branch), remote: true, class: "ml-1 bg-transparent border rounded-full px-4 py-1 border-brand-gray text-brand-gray hover:bg-brand-gray hover:text-white transition-colors duration-300"
