add padding to course overlay

--- a/app/views/courses/course/_course_overlay.html.haml
+++ b/app/views/courses/course/_course_overlay.html.haml
@@ -8,18 +8,29 @@
     %p.text-base.text-gray-700= course.description
   %div.mt-4
     %ul
-      %li.text-xs Fundamentals of working with Angular
-      %li.text-xs Fundamentals of working with Angular
-      %li.text-xs Fundamentals of working with Angular
-      %li.text-xs Fundamentals of working with Angular
-      %li.text-xs Fundamentals of working with Angular
-      %li.text-xs Fundamentals of working with Angular
-      %li.text-xs Fundamentals of working with Angular
+      -course.sections.each do |section|
+        %li.text-xs.flex.items-center.pt-1
+          %span.text-brand-gray
+            %svg.h-4.w-4.fill-current{xmlns: "http://www.w3.org/2000/svg", viewBox:"0 0 20 20" }
+              %path{d: "M0 11l2-2 5 5L18 3l2 2L7 18z"}
+          %span.pl-2= section.section_title
   %div.mt-4.flex.justify-between.items-center
     %div.flex.flex-col
-      %span.text-xs #{course.duration} hours 
-      %span.text-xs 12 lessons
-      %span.text-xs= course.level 
+      %span.flex.items-center.pb-1.text-xs
+        %span.text-brand-gray
+          %svg.h-4.w-4.fill-current{xmlns: "http://www.w3.org/2000/svg", viewBox:"0 0 20 20" }
+            %path{d: "M10 20a10 10 0 1 1 0-20 10 10 0 0 1 0 20zm0-2a8 8 0 1 0 0-16 8 8 0 0 0 0 16zm-1-7.59V4h2v5.59l3.95 3.95-1.41 1.41L9 10.41z"}
+        %span.pl-2 #{course.duration} hours
+      %span.flex.items-center.pb-1.text-xs
+        %span.text-brand-gray
+          %svg.h-4.w-4.fill-current{xmlns: "http://www.w3.org/2000/svg", viewBox:"0 0 20 20" }
+            %path{d: "M4 4l12 6-12 6z"}
+        %span.pl-2 #{course.sections.length} lessons
+      %span.flex.items-center.pb-1.text-xs
+        %span.text-brand-gray
+          %svg.h-4.w-4.fill-current{xmlns: "http://www.w3.org/2000/svg", viewBox:"0 0 20 20" }
+            %path{d: "M10 1l10 6-10 6L0 7l10-6zm6.67 10L20 13l-10 6-10-6 3.33-2L10 15l6.67-4z"}
+        %span.pl-2= course.level
     %div
       =link_to 'Watch Trailer', course_path(course), class: 'inline-block px-5 py-3 rounded bg-teal-500 text-white hover:bg-teal-600 '
 
